--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,32 @@
 	text-align: center;
     margin-top: 100px;
 }
+
+.imagePreview {
+	height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.imagePreviewContainer {
+	height: 200px;
+    width: 33%;
+    position: relative;
+    border: 1px solid #dddddd;
+    padding: 4px;
+    margin: 0 0.5em 1em;
+    border-radius: 8px;
+}
+
+.close {
+	position: absolute;
+    right: 0;
+    z-index: 99999;
+    margin: 0 !important;
+}
+
+.imagePreviewStrip {
+	display: flex;
+}
